package com.laryssa.banco.model.enums;

public enum TipoTransacao {
    SAQUE,
    DEPOSITO,
    TRANSFERENCIA
}
